# ATAT

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/atat/: __init__.py  __main__.py  exceptions.py  file_handling.py  main.py  parser.py  plotting.py  stats.py
tests/: conftest.py  test_cli.py  test_integration.py  test_io.py  test_parser.py  test_plotting.py  test_stats.py  utils.py
tests/example_data/: input_data.csv  output_data.csv
