[project]
name = "atat"
version = "0.1.0"
description = "CLI tool for plotting and returning statistics from antibody data."
dependencies = [
    "sphinx>=7.3.7",
    "numpy>=1.26.4",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
atat = "atat.main:main"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "sphinx>=7.3.7",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "black>=24.4.2",
    "pandas-stubs>=2.2.2.240514",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/atat",
]

[tool.mypy]
disallow_untyped_defs = true
exclude = [
    "tests",
    "source",
]

[tool.pytest.ini_options]
addopts = "-ra -s -vv"
testpaths = [
    "tests",
]
